--- a/index.html
+++ b/index.html
@@ -145,22 +145,30 @@
 			.tabs { overflow-x: auto; white-space: nowrap; }
             #menu-backdrop { display: none; position: fixed; top:0; left:0; width:100%; height:100%; background: rgba(0,0,0,0.5); z-index: 9999; }
             #menu-backdrop.active { display: block; }
-            #mobile-header { display: flex; align-items: center; justify-content: space-between; padding: 10px 15px; background: #0d1117; border-bottom: 1px solid var(--border); }
+            
 		}
         @media (min-width: 1025px) { #mobile-header { display: none; } }
 		
 		/* Dinamik Ada Uyumlu Üst Bar */
-		#mobile-header {
-			display: flex !important;
-			align-items: center;
-			justify-content: space-between;
-			background: #0d1117;
-			border-bottom: 1px solid var(--border);
-			/* Üstten boşluğu Dinamik Ada'ya göre otomatik ayarlar */
-			padding-top: env(safe-area-inset-top) !important;
-			height: 50px; /* İçerik yüksekliği sabit */
-			box-sizing: content-box; /* Padding'i yüksekliğe ekler */
-			z-index: 9999;
+		
+		/* Masaüstü için kesin gizleme */
+		@media (min-width: 1025px) { 
+			#mobile-header { display: none !important; } 
+		}
+
+		/* Mobil için görünürlük ve Dinamik Ada Ayarı */
+		@media (max-width: 1024px) {
+			#mobile-header {
+				display: flex !important; /* Sadece mobilde görünür yap */
+				align-items: center;
+				justify-content: space-between;
+				background: #0d1117;
+				border-bottom: 1px solid var(--border);
+				padding-top: env(safe-area-inset-top) !important;
+				height: 50px;
+				box-sizing: content-box;
+				z-index: 9999;
+			}
 		}
 
 		/* Sidebar Başlığı (Menü açıldığında ada altında kalmaması için) */
